OOps, that was java >= 19